--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             <button onclick="solve10()" id="button_solution10" href="">Show</button>
             <span id="solution10"> </span>
           </li>
+          <li>
+            <a href="https://projecteuler.net/problem=13">13 - Large sum</a>
+            <button onclick="app.solve13()" id="button_solution13" href="">Show</button>
+            <span id="solution13"> </span>
+          </li>
   			</ul>
     </body>
 
