Code Refactored, now it's an app

--- a/index.html
+++ b/index.html
@@ -1,29 +1,37 @@
+<!DOCTYPE html>
+
 <html>
     <head>
         <meta charset="utf-8">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
     </head>
     <body>
         <ul>
           <li>
             <a href="https://projecteuler.net/problem=1">1 - Multiples of 3 and 5</a>
-            <button onclick="app.solve1()" id="button_solution1" href="">Show</button>
+            <button id="button_solution1">Show</button>
             <span id="solution1"> </span>
           </li>
           <li>
             <a href="https://projecteuler.net/problem=8">8 - Largest product in a series</a>
-            <button onclick="app.solve8()" id="button_solution8" href="">Show</button>
+            <button id="button_solution8">Show</button>
             <span id="solution8"> </span>
           </li>
           <li>
             <a href="https://projecteuler.net/problem=10">10 - Summation of primes</a>
-            <button onclick="solve10()" id="button_solution10" href="">Show</button>
+            <button id="button_solution10">Show</button>
             <span id="solution10"> </span>
           </li>
           <li>
             <a href="https://projecteuler.net/problem=13">13 - Large sum</a>
-            <button onclick="app.solve13()" id="button_solution13" href="">Show</button>
+            <button id="button_solution13">Show</button>
             <span id="solution13"> </span>
+          </li>
+          <li>
+            <a href="https://projecteuler.net/problem=14">14 - Longest Collatz sequence</a>
+            <button id="button_solution14">Show</button>
+            <span id="solution14"> </span>
           </li>
   			</ul>
     </body>
