--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,12 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <!-- <link rel="stylesheet" href="css/style.css"> -->
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
     </head>
     <body>
-        <h3>Solutions of <a href="https://projecteuler.net">projecteuler.net</a> problems:</h3>
+        <h3 class="tittle">Solutions of <a class="link_black" href="https://projecteuler.net">projecteuler.net</a> problems:</h3>
         <table class="table">
           <tr>
             <th>ID</th>
@@ -15,31 +16,31 @@
             <th>Answer</th>
             <th>Value</th>
           </tr>
-          <tr>
+          <tr class="tr_problem">
             <td class="id_column">01</td>
             <td class="title_column"><a href="https://projecteuler.net/problem=1">Multiples of 3 and 5</a></td>
             <td class="button_column"><button id="button_solution1" class="button">Show</button></td>
             <td class="answer_column"><span id="solution1"></span></td>
           </tr>
-          <tr>
+          <tr class="tr_problem">
             <td>08</td>
             <td class="title_column"><a href="https://projecteuler.net/problem=8">Largest product in a series</a></td>
             <td><button id="button_solution8" class="button">Show</button></td>
             <td><span id="solution8"></span></td>
           </tr>
-          <tr>
+          <tr class="tr_problem">
             <td>10</td>
             <td class="title_column"><a href="https://projecteuler.net/problem=10">Summation of primes</a></td>
             <td><button id="button_solution10" class="button">Show</button></td>
             <td><span id="solution10"></span></td>
           </tr>
-          <tr>
+          <tr class="tr_problem">
             <td>13</td>
             <td class="title_column"><a href="https://projecteuler.net/problem=13">Large sum</a></td>
             <td><button id="button_solution13" class="button" >Show</button></td>
             <td><span id="solution13"></span></td>
           </tr>
-          <tr>
+          <tr class="tr_problem">
             <td>14</td>
             <td class="title_column"><a href="https://projecteuler.net/problem=14">Longest Collatz sequence</a></td>
             <td><button id="button_solution14" class="button">Show</button></td>
