--- a/public/index.html
+++ b/public/index.html
@@ -9,41 +9,41 @@
     <body>
         <h3 class="tittle">Solutions of <a class="link_black" href="https://projecteuler.net">projecteuler.net</a> problems:</h3>
         <table class="table">
-          <tr>
-            <th>ID</th>
-            <th>Title</th>
-            <th>Answer</th>
-            <th>Value</th>
+          <tr class="tr">
+            <th class="th">ID</th>
+            <th class="th">Title</th>
+            <th class="th">Answer</th>
+            <th class="th">Value</th>
           </tr>
           <tr class="tr_problem">
             <td class="id_column">01</td>
-            <td class="title_column"><a href="https://projecteuler.net/problem=1">Multiples of 3 and 5</a></td>
+            <td class="title_column"><a class="link_problem" href="https://projecteuler.net/problem=1" target="_blank">Multiples of 3 and 5</a></td>
             <td class="button_column"><button id="button_solution1" class="button">Show</button></td>
             <td class="answer_column"><span id="solution1"></span></td>
           </tr>
           <tr class="tr_problem">
-            <td>08</td>
-            <td class="title_column"><a href="https://projecteuler.net/problem=8">Largest product in a series</a></td>
-            <td><button id="button_solution8" class="button">Show</button></td>
-            <td><span id="solution8"></span></td>
+            <td class="id_column">08</td>
+            <td class="title_column"><a class="link_problem" href="https://projecteuler.net/problem=8" target="_blank">Largest product in a series</a></td>
+            <td class="button_column"><button id="button_solution8" class="button">Show</button></td>
+            <td class="answer_column"><span id="solution8"></span></td>
           </tr>
           <tr class="tr_problem">
-            <td>10</td>
-            <td class="title_column"><a href="https://projecteuler.net/problem=10">Summation of primes</a></td>
-            <td><button id="button_solution10" class="button">Show</button></td>
-            <td><span id="solution10"></span></td>
+            <td class="id_column">10</td>
+            <td class="title_column"><a class="link_problem" href="https://projecteuler.net/problem=10" target="_blank">Summation of primes</a></td>
+            <td class="button_column"><button id="button_solution10" class="button">Show</button></td>
+            <td class="answer_column"><span id="solution10"></span></td>
           </tr>
           <tr class="tr_problem">
-            <td>13</td>
-            <td class="title_column"><a href="https://projecteuler.net/problem=13">Large sum</a></td>
-            <td><button id="button_solution13" class="button" >Show</button></td>
-            <td><span id="solution13"></span></td>
+            <td class="id_column">13</td>
+            <td class="title_column"><a class="link_problem" href="https://projecteuler.net/problem=13" target="_blank">Large sum</a></td>
+            <td class="button_column"><button id="button_solution13" class="button" >Show</button></td>
+            <td class="answer_column"><span id="solution13"></span></td>
           </tr>
           <tr class="tr_problem">
-            <td>14</td>
-            <td class="title_column"><a href="https://projecteuler.net/problem=14">Longest Collatz sequence</a></td>
-            <td><button id="button_solution14" class="button">Show</button></td>
-            <td><span id="solution14"></span></td>
+            <td class="id_column">14</td>
+            <td class="title_column"><a class="link_problem" href="https://projecteuler.net/problem=14" target="_blank">Longest Collatz sequence</a></td>
+            <td class="button_column"><button id="button_solution14" class="button">Show</button></td>
+            <td class="answer_column"><span id="solution14"></span></td>
           </tr>
   			</table>
     </body>
