--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script type="text/javascript" src="zepto.js"> </script>
         <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
     </head>
 
